Enum role{
  admin
  author
  reader
}


Enum author_status {
  active
  inactive
  banned
}

Enum post_status {
  draft
  published
  archived
}


Table users{
  user_id bigint [pk, increment]
  username varchar(255) [not null, unique]
  email varchar(255) [unique, not null]
  password varchar(255) [not null]
  role  role [default: 'reader']
  created_at timestamp [default: `NOW()`]
}


Table authors{
author_id bigint [pk, ref: - users.user_id]
first_name varchar(255) [not null]
last_name varchar(255) [null]
bio text
profile_picture_url text
author_status author_status [default: 'active']
created_at timestamp
updated_at timestamp
}



Table blog_posts{
  blog_post_id bigint [pk, increment, not null]
  author_id bigint [not null, ref: > authors.author_id]
  title varchar(255) [not null]
  content text [not null]
  post_status post_status [default: 'draft']
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  published_at timestamp 
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]

  indexes {
    (author_id)
    (post_status)
  }

}

Table categories {
  cat_id bigint [pk, increment]
  category_name varchar [unique, not null]
  description text
}



Table post_categories {
  blog_post_id bigint [ ref: > blog_posts.blog_post_id]
  cat_id bigint [ref: > categories.cat_id]

  indexes {
    (blog_post_id, cat_id) [pk]
  }
}






Table comments {
  comment_id bigint [pk, increment]
  content text [not null]
  created_at timestamp [ default: `CURRENT_TIMESTAMP`]
  blog_post_id bigint [not null, ref: > blog_posts.blog_post_id]
  user_id bigint [ not null, ref: > users.user_id]

  indexes {
    (blog_post_id)
    (user_id)
  }
  
}


Table post_view_count {
  blog_post_id bigint [pk, ref: - blog_posts.blog_post_id]
  view_count bigint [default: 0]

}


Table post_view_logs {
  view_log_id bigint [pk, increment]
  blog_post_id bigint [not null, ref: > blog_posts.blog_post_id]
  user_id bigint [ref: > users.user_id, not null]
  viewed_at timestamp [default:  `CURRENT_TIMESTAMP`]

  indexes {
    (blog_post_id)
    (user_id)
  }

}





